<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Market</string>
    <string name="title_activity_home">Market</string>
    <string name="title_home">Home</string>
    <string name="title_Cart"> Cart</string>
    <string name="title_Account">Account</string>
    <string name="title_Setting">Settings</string>
    <string name="origin">Country of Origin:</string>
    <string name="weight">weight:</string>
    <string name="price">price:</string>
    <string name="offers">Presentation</string>
    <string name="fruits">fruits</string>
    <string name="leafy">leafy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="have_account">have an account?</string>
    <string name="email">* Email / phone number</string>
    <string name="password">password*</string>
    <string name="login">sign in</string>
    <string name="forgotPassword">forgot the password</string>
    <string name="create_account">Create account</string>
    <string name="continueWithGoogle">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="first_name">* First name</string>
    <string name="last_name">* family name</string>
    <string name="Email">E-mail</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_num">phone number *</string>
    <string name="female">female</string>
    <string name="male">Male</string>
    <string name="mandatory_items">* Information should be entered into these boxes</string>
    <string name="next">next</string>
    <string name="new_account">new account</string>
    <string name="vegetables">Vegetables</string>
    <string name="governorate">Governorate</string>
    <string name="reigon">Region</string>
    <string name="neighborhood">District</string>
    <string name="street">Street</string>
    <string name="building_num">building number</string>
    <string name="floor">Floor</string>
    <string name="flat_number">Apartment number</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_pass">forgot the password</string>
    <string name="confirm">confirm</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="count_item">0</string>
    <string name="add_to_cart">add to cart</string>
    <string name="country">Country</string>
    <string name="product_name">product name</string>
    <string name="view_all">View all</string>
    <string name="total_order">Total:</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="_20_50">20.50</string>
    <string name="total">Total :</string>
    <string name="general_notes">General Notes:</string>
    <string name="notes">Notes</string>
    <string name="confrim">Confirm</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="address_to_deliver">Delivery Address</string>
    <string name="add_new">Add new</string>
    <string name="back">back</string>
    <string name="promo">Discount code</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="title_my_orders">My Orders</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="order">Order 223#</string>
    <string name="delivery">Delivery</string>
    <string name="my_addresses">My Addresses</string>

    <string name="lang">Language</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy </string>
    <string name="choose_lang">Choose Language</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="add_address">Add Address</string>
</resources>