<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="match_parent"
        tools:context=".ui.SignUpFragment">

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha=".4"
            android:textSize="15dp"
            android:background="@drawable/raduis_border"
            android:hint="@string/first_name"
            android:padding="10dp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha=".4"
            android:background="@drawable/raduis_border"
            android:hint="@string/last_name"
            android:padding="10dp"
            android:textSize="15dp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/et_first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:alpha=".4"
            android:background="@drawable/raduis_border"
            android:hint="@string/Email"
            android:padding="10dp"
            android:textSize="15dp"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/et_first_name"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:alpha=".4"
            android:background="@drawable/raduis_border"
            android:hint="@string/password"
            android:padding="10dp"
            android:imeOptions="actionNext"
            android:textSize="15dp"
            android:textAlignment="viewStart"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_date_of_birth"
            android:layout_width="match_parent"
            android:alpha=".4"
            android:background="@drawable/raduis_border"
            android:hint="@string/date_of_birth"
            android:padding="10dp"
            android:imeOptions="actionNext"
            android:textAlignment="viewStart"
            android:inputType="date"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="match_parent"
            android:alpha=".4"
            android:background="@drawable/raduis_border"
            android:hint="@string/phone_num"
            android:padding="10dp"
            android:imeOptions="actionNext"
            android:textAlignment="viewStart"
            android:inputType="phone"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/et_date_of_birth"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/et_phone_num"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/redio_female"
                android:layout_width="wrap_content"
                android:text="@string/female"
                android:alpha=".4"
                android:buttonTint="@color/colorPrimary"
                android:paddingStart="10dp"

                android:paddingEnd="20dp"
                android:background="@drawable/raduis_border"
                android:textColor="@color/colorPrimary"
                android:layout_height="30dp" />

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_marginStart="40dp"
                android:layout_width="wrap_content"
                android:text="@string/male"
                android:alpha=".4"
                android:buttonTint="@color/colorPrimary"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:background="@drawable/raduis_border"
                android:textColor="@color/colorPrimary"
                android:layout_height="30dp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/mandatory_items"
            android:id="@+id/tv_mandatory_items"
            android:layout_marginTop="20dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group_gender"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@id/tv_mandatory_items"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/cardview_bg" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>