<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".ui.cart.ConfirmOrderFragment">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_promo_txt"
            android:text="@string/promo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:id="@+id/promo_container"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_promo_txt"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/raduis_border"
            app:layout_constraintBottom_toBottomOf="@id/et_promo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp" />

        <EditText
            android:id="@+id/et_promo"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="4dp"

            android:alpha=".4"
            android:background="@android:color/transparent"
            android:hint="@string/product_name"
            android:padding="10dp"
            android:textColorHint="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="@id/promo_container"
            app:layout_constraintTop_toTopOf="@id/promo_container"
            app:layout_constraintWidth_percent=".4" />

        <Button
            android:id="@+id/btn_confirm_promo"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn_bg"
            android:padding="10dp"
            android:text="@string/confrim"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/et_promo"
            app:layout_constraintEnd_toEndOf="@id/promo_container"
            app:layout_constraintTop_toTopOf="@id/promo_container" />

        <TextView
            android:id="@+id/tv_total_order_txt"
            android:text="@string/total_order"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/promo_container"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_total_order"
            android:layout_width="wrap_content"
            android:text="20.50"
            app:layout_constraintTop_toTopOf="@id/tv_total_order_txt"
            app:layout_constraintBottom_toBottomOf="@id/tv_total_order_txt"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_delivery_txt"
            android:text="@string/delivery_charge"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_total_order_txt"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_delivery"
            android:layout_width="wrap_content"
            android:text="@string/_20_50"
            app:layout_constraintTop_toTopOf="@id/tv_delivery_txt"
            app:layout_constraintBottom_toBottomOf="@id/tv_delivery_txt"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tv_delivery_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="#ebe7f2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/tv_total_txt"
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:text="@string/_20_50"
            app:layout_constraintTop_toTopOf="@id/tv_total_txt"
            app:layout_constraintBottom_toBottomOf="@id/tv_total_txt"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="40dp"
            android:text="@string/back"
            android:padding="10dp"
            app:layout_constraintWidth_percent=".4"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_total"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="40dp"
            android:text="@string/confirm_order"
            android:padding="10dp"
            app:layout_constraintWidth_percent=".4"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_total_txt"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>