<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".ui.cart.CartItemsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_orders"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/cart_item"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_total_order_txt"
            android:text="@string/total_order"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recycler_orders"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_total_order"
            android:layout_width="wrap_content"
            android:text="20.50"
            app:layout_constraintTop_toTopOf="@id/tv_total_order_txt"
            app:layout_constraintBottom_toBottomOf="@id/tv_total_order_txt"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_delivery_txt"
            android:text="@string/delivery_charge"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_total_order_txt"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_delivery"
            android:layout_width="wrap_content"
            android:text="@string/_20_50"
            app:layout_constraintTop_toTopOf="@id/tv_delivery_txt"
            app:layout_constraintBottom_toBottomOf="@id/tv_delivery_txt"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tv_delivery_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="#ebe7f2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/tv_total_txt"
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:text="@string/_20_50"
            app:layout_constraintTop_toTopOf="@id/tv_total_txt"
            app:layout_constraintBottom_toBottomOf="@id/tv_total_txt"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_notes_txt"
            android:layout_width="wrap_content"
            android:text="@string/general_notes"
            app:layout_constraintStart_toStartOf="@id/tv_total_txt"
            app:layout_constraintTop_toBottomOf="@id/tv_total_txt"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_notes"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tv_notes_txt"
            app:layout_constraintStart_toStartOf="@id/tv_notes_txt"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLines="3"
            android:lines="3"
            android:inputType="textMultiLine"
            android:background="@drawable/raduis_border"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/notes"
            android:alpha=".4"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="40dp"
            android:text="@string/continue_shopping"
            app:layout_constraintWidth_percent=".4"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/et_notes"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="40dp"
            android:text="@string/next"
            app:layout_constraintWidth_percent=".4"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/et_notes"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>