<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
<androidx.cardview.widget.CardView
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    app:cardCornerRadius="10dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/raduis_border"
        android:padding="30dp"
        android:paddingStart="20dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_address"
            android:text="@string/address_to_deliver"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_governorate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_address"
            android:text="@string/governorate"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_edit"
            android:text="@string/edit"
            app:layout_constraintTop_toBottomOf="@id/tv_governorate"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorPrimaryDark"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

</layout>