<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".ui.cart.AddressToDeliverFragment">


        <TextView
            android:id="@+id/tv_address_to_deliver_txt"
            android:layout_width="wrap_content"
            android:text="@string/address_to_deliver"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_add_new"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_address_to_deliver_txt"
            app:layout_constraintBottom_toBottomOf="@id/tv_address_to_deliver_txt"
            android:text="@string/add_new"
            android:textColor="@color/colorPrimaryDark"
            android:clickable="true"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/recycler_addresses"
            app:layout_constraintTop_toBottomOf="@id/tv_address_to_deliver_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/address_item"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="40dp"
            android:text="@string/back"
            app:layout_constraintWidth_percent=".4"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/recycler_addresses"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="40dp"
            android:text="@string/next"
            app:layout_constraintWidth_percent=".4"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/recycler_addresses"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>